--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.show-sql=true
 spring.jta.enabled=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+spring.jmx.enabled=false
+jwt.secret=jBZ4#5A9.rd]2D}A
+jwt.expired.days=14
