--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=80
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/Books
+spring.datasource.url=jdbc:postgresql://localhost:5432/books
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=123ewqpass
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jta.enabled=true
