--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=80
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/books
 spring.datasource.username=postgres
-spring.datasource.password=123ewqpass
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jta.enabled=true
@@ -12,3 +12,10 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jmx.enabled=false
 jwt.secret=jBZ4#5A9.rd]2D}A
 jwt.expired.days=14
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=ivmiit.work@gmail.com
+spring.mail.password=123ewqasdcxz
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.allow8bitmime=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
