--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ jwt.secret=jBZ4#5A9.rd]2D}A
 jwt.expired.days=14
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=ivmiit.work@gmail.com
+spring.mail.username=...@gmail.com
 spring.mail.password=123ewqasdcxz
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.allow8bitmime=true
